--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -38,12 +38,12 @@
             label: 'Todo Chart',
             backgroundColor: ['rgba(154, 205, 50, 0.2)', 'rgba(255, 99, 132, 0.2)'],
             borderColor: ['rgb(154, 205, 50)', 'rgb(255, 99, 132)'],
-            data: [incomplete, archive],
+            data: [archive, incomplete],
         }]
     };
 
     const config = {
-        type: 'polarArea',
+        type: 'pie',
         data: data,
         options: {}
     };
