--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -28,7 +28,7 @@
             <div class="btns">
                 <button type="submit" class="btn btn-outline-dark">Add Todo</button>
                 <a href="/archives" class="btn btn-success">Archives</a>
-                <a href="/chart" class="btn btn-outline-info">Chart</a>
+                <a href="/dashboard/chart" class="btn btn-outline-info">Chart</a>
             </div>
         </form>
 
